frontend/tmc-booker-react/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmc-booker-react-svc
  namespace: development
spec:
  selector:
    app: tmc-booker-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
